added looping music

--- a/part9.html
+++ b/part9.html
@@ -11,7 +11,9 @@
     </style>
 </head>
 <body>
-
+<audio controls loop autoplay="true" style="display: none;">
+  <source src="assets/lh2.mp3" type="audio/mp3">
+  </audio>
 <script type="text/javascript">
 //Part 9 of the phaser tutorial found at http://phaser.io/tutorials/making-your-first-phaser-game/index
 var game = new Phaser.Game(512, 384, Phaser.AUTO, '', { preload: preload, create: create, update: update });
